dashboard.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/issuer: clusterissuer-le
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - test-cluster-dashboard.wildwolf.name
  #     secretName: certificate-prod-dashboard
  rules:
    - host: kube.local
      http:
        paths:
          - pathType: "Prefix"
            path: /
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
